[package]
name = "traits_serde_default"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.157", features = ["derive"], optional = true }
serde_json = "1.0.94"

[features]
serde = ["dep:serde"]
